update live tv guide

--- a/MediaBrowser.WebDashboard/dashboard-ui/channels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channels.html
@@ -16,7 +16,7 @@
                 <a href="channels.html?tab=1" class="ui-btn-active"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
             </div>
         </div>
-        <div class="ehsContent">
+        <div class="ehsContent fullWidth">
             <neon-animated-pages>
                 <neon-animatable>
                     <div class="pageTabContent latestContent">
