--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="pageBackground"></div>
-        <div class="ehsContent">
+        <div class="ehsContent fullWidth">
             <neon-animated-pages>
                 <neon-animatable>
                     <div class="pageTabContent homeTabContent">
