--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
@@ -73,7 +73,7 @@
                             <paper-fab class="listAvatar" icon="refresh" style="background-color:#673AB7;" item-icon></paper-fab>
                             <paper-item-body two-line>
                                 <div>${ButtonSyncSettings}</div>
-                                <div secondary>${ButtonSyncHelp}</div>
+                                <div secondary>${ButtonSyncSettingsHelp}</div>
                             </paper-item-body>
                         </paper-icon-item>
                     </a>
