--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
@@ -4,15 +4,8 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvSeriesTimerPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents,scripts/livetvseriestimer,livetvcss">
-        <div class="libraryViewNav">
-            <a href="livetvsuggested.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-            <a href="livetvguide.html"><iron-icon icon="grid-on"></iron-icon>${TabGuide}</a>
-            <a href="livetvchannels.html"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
-            <a href="livetvrecordings.html"><iron-icon icon="slideshow"></iron-icon>${TabRecordings}</a>
-            <a href="livetvtimers.html"><iron-icon icon="schedule"></iron-icon>${TabScheduled}</a>
-            <a href="livetvseriestimers.html" class="ui-btn-active"><iron-icon icon="refresh"></iron-icon>${TabSeries}</a>
-        </div>
+    <div id="liveTvSeriesTimerPage" data-role="page" class="page libraryPage liveTvPage noSecondaryNavPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents,scripts/livetvseriestimer,livetvcss" data-backbutton="true" data-menubutton="false">
+        
         <div data-role="content">
             <form class="liveTvSeriesTimerForm" style="margin: 0 auto; max-width: 720px;">
                 <p><span class="itemName inlineItemName"></span></p>
