--- a/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
@@ -16,8 +16,11 @@
                 <div class="detailSectionContent">
 
                     <br />
-                    <paper-checkbox class="chkSyncToExternalCard">${OptionSyncToSDCard}</paper-checkbox>
-
+                    <div>
+                        <paper-input type="text" id="txtSyncPath" label="${LabelSyncPath}" style="display:inline-block;width:80%;" readonly></paper-input>
+                        <paper-icon-button class="btnSelectSyncPath" icon="search"></paper-icon-button>
+                        <div class="fieldDescription">${LabelSyncPathHelp}</div>
+                    </div>
                 </div>
 
                 <br />
