--- a/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
@@ -24,6 +24,11 @@
                     <div>
                         <paper-checkbox id="chkWifi">${OptionSyncOnlyOnWifi}</paper-checkbox>
                     </div>
+
+                    <br />
+                    <div>
+                        <paper-checkbox id="chkSyncLosslessAudio">${OptionSyncLosslessAudioOriginal}</paper-checkbox>
+                    </div>
                 </div>
 
                 <br />
