--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-out.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-out.html
@@ -2724,7 +2724,8 @@ prevent = dy > dx;
 prevent = dx > dy;
 }
 if (prevent) {
-ev.preventDefault();
+// This prevents horizontal scrolling in safari
+//ev.preventDefault();
 } else {
 Gestures.prevent('track');
 }
