update channel settings

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
@@ -88,21 +88,17 @@
                             <div class="folderGroupList"></div>
                             <div class="fieldDescription">${LabelSelectFolderGroupsHelp}</div>
                         </div>
+
+                        <br />
+                        <div>
+                            <paper-checkbox class="chkDisplayChannelsInline">${OptionDisplayChannelsInline}</paper-checkbox>
+                            <div class="fieldDescription paperCheckboxFieldDescription">${OptionDisplayChannelsInlineHelp}</div>
+                        </div>
                         <br />
 
                         <div>
                             <paper-checkbox class="chkDisplayCollectionView">${LabelDisplayCollectionsView}</paper-checkbox>
                             <div class="fieldDescription paperCheckboxFieldDescription">${LabelDisplayCollectionsViewHelp}</div>
-                        </div>
-
-                        <br />
-                        <div data-role="collapsible">
-                            <h2>${HeaderChannels}</h2>
-                            <div>
-                                <p>${LabelGroupChannelsIntoViews}</p>
-                                <div class="channelGroupList"></div>
-                                <div class="fieldDescription">${LabelGroupChannelsIntoViewsHelp}</div>
-                            </div>
                         </div>
                     </div>
                 </div>
